# AI_story

./: .gitignore  README.md  docker-compose.yml  requirements.md  spec.md  todolist.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  ai.py  export.py  projects.py  prompts.py  settings.py
backend/app/config/: default_prompts.yaml
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  ai_settings.py  enums.py  project.py  stage.py  stage_version.py  system_prompt.py
backend/app/schemas/: __init__.py  ai.py  project.py  settings.py  stage.py  system_prompt.py
backend/app/services/: __init__.py  ai_service.py  export_service.py  project_service.py  prompt_service.py
backend/app/utils/: __init__.py  ai_client.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  icon.tsx  layout.tsx  page.tsx
frontend/src/app/settings/: SystemPromptSettings.tsx  page.tsx
frontend/src/components/: ExportModal.tsx  PromptEditorModal.tsx
frontend/src/components/editor/: RichTextEditor.tsx  VersionCompareModal.tsx  VersionHistory.tsx
frontend/src/components/ui/: Toast.tsx
frontend/src/hooks/: useAI.ts  useAutoSave.ts  useStageNavigation.ts  useToast.ts
frontend/src/stores/: projectStore.ts  settingsStore.ts  stageStore.ts  uiStore.ts
frontend/src/types/: index.ts
(+4 files in other folders)
